--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="hero-content">
             <h1 class="hero-name">
-                Charlie Giorgania
+                Clifford Owusu
             </h1>
             <p class="hero-summary">
                 Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.<br>
