Modified the html page with the optional changes suggested by the code reviewer Refactored the css

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="nav-container">
+        <header class="nav-container">
             <div class="logo">
-                <img src="assets/images/Shape-1.png" alt="Shape-1"/>
-                <img id="shape" src="assets/images/Shape.png" alt="Shape"/>
+                <a href="#">
+                    <img src="assets/images/logo.png" alt="logo"/>
+                </a>
             </div>
-            <img class="nav-icon" src="/assets/images/ic_menu.png" alt="menu-icon"/>
-        </div>
-        <div class="hero-content">
+            <nav>
+                <img class="nav-icon" src="/assets/images/ic_menu.png" alt="menu-icon"/>
+            </nav>
+        </header>
+        <section class="hero-content">
             <h1 class="hero-name">
                 Clifford Owusu
             </h1>
@@ -29,9 +32,9 @@
                 If you like what you see and have a project you need coded, don’t hesitate and contact me.
             </p>
             <div class="collab">
-                <p>Start Collaboration</p>
+                <a href="#">Start Collaboration</a>
             </div>
-        </div>
+        </section>
     </div>
     <div class="content-geo">
         <img src="/assets/images/image_geometry_2.png" alt=""/>
