Finished with the projects page All linters check passed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <div class="wrapper">
         <header class="nav-container">
             <div class="logo">
                 <a href="#">
-                    <img src="assets/images/logo.png" alt="logo"/>
+                    <img src="assets/images/logo.png" alt="logo" />
                 </a>
             </div>
             <nav>
-                <img class="nav-icon" src="/assets/images/ic_menu.png" alt="menu-icon"/>
+                <img class="nav-icon" src="/assets/images/ic_menu.png" alt="menu-icon" />
             </nav>
         </header>
         <section class="hero-content">
@@ -28,17 +31,105 @@
                 Clifford Owusu
             </h1>
             <p class="hero-summary">
-                Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.<br>
+                Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my
+                works.<br>
                 If you like what you see and have a project you need coded, don’t hesitate and contact me.
             </p>
             <div class="collab">
                 <a href="#">Start Collaboration</a>
             </div>
         </section>
-    </div>
-    <div class="content-geo">
-        <img src="/assets/images/image_geometry_2.png" alt=""/>
+        <div class="content-geo">
+            <img src="/assets/images/image_geometry_2.png" alt="" />
+        </div>
+        <section class="projects">
+            <h1> Projects </h1>
+            <div class="project-grid-list">
+                <div class="project-item">
+                    <img src="/assets/images/projects-img-1.png" alt="projects image" />
+                    <div class="project-item-desc">
+                        <h1>Project name goes here</h1>
+                        <ul class="languages">
+                            <li>HTML/CSS</li>
+                            <li>Ruby on Rails</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <div class="see-more">
+                            <a href="#">See this project </a>
+                            <img src="/assets/images/Union.png" alt="right arrow icon" />
+                        </div>
+
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="/assets/images/projects-img-2.png" alt="projects image" />
+                    <div class="project-item-desc">
+                        <h1>Project name goes here</h1>
+                        <ul class="languages">
+                            <li>HTML/CSS</li>
+                            <li>Ruby on Rails</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <div class="see-more">
+                            <a href="#">See this project </a>
+                            <img src="/assets/images/Union.png" alt="right arrow icon" />
+                        </div>
+
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="/assets/images/projects-img-3.png" alt="projects image" />
+                    <div class="project-item-desc">
+                        <h1>Project name goes here</h1>
+                        <ul class="languages">
+                            <li>HTML/CSS</li>
+                            <li>Ruby on Rails</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <div class="see-more">
+                            <a href="#">See this project </a>
+                            <img src="/assets/images/Union.png" alt="right arrow icon" />
+                        </div>
+
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="/assets/images/projects-img-4.png" alt="projects image" />
+                    <div class="project-item-desc">
+                        <h1>Project name goes here</h1>
+                        <ul class="languages">
+                            <li>HTML/CSS</li>
+                            <li>Ruby on Rails</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <div class="see-more">
+                            <a href="#">See this project </a>
+                            <img src="/assets/images/Union.png" alt="right arrow icon" />
+                        </div>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="/assets/images/projects-img-5.png" alt="projects image" />
+                    <div class="project-item-desc">
+                        <h1>Project name goes here</h1>
+                        <ul class="languages">
+                            <li>HTML/CSS</li>
+                            <li>Ruby on Rails</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <div class="see-more">
+                            <a href="#">See this project </a>
+                            <img src="/assets/images/Union.png" alt="right arrow icon" />
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
     </div>
 
 </body>
+
 </html>
