--- a/index.html
+++ b/index.html
@@ -123,10 +123,49 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
-
+        </section>
+        <section class="about">
+            <h1>About</h1>
+            <p id="bio">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod
+            </p>
+            <div class="download-cv">
+                <a href="#">Get my CV </a>
+                <img src="/assets/images/ic_download.png" alt="right arrow icon" />
+            </div>
+            <div class="categories">
+                <div class="category-list languages">
+                    <h1>Languages</h1>
+                    <ul>
+                        <li>JavaScript (ES5/ES6)</li>
+                        <li>Ruby</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+                <div class="category-list frameworks">
+                    <h1>Frameworks</h1>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>Ruby on Rails</li>
+                        <li>RSpec</li>
+                        <li>Capibara</li>
+                        <li>Selenium</li>
+                    </ul>
+                </div>
+                <div class="category-list skills">
+                    <h1>Skills</h1>
+                    <ul>
+                        <li>Codekit</li>
+                        <li>Codepen</li>
+                        <li>GitHub</li>
+                        <li>GitLab</li>
+                        <li>Terminal</li>
+                    </ul>
+                </div>
+            </div>
+                
         </section>
     </div>
 
