Add Contact form & Footer sections

--- a/index.html
+++ b/index.html
@@ -167,6 +167,72 @@
             </div>
                 
         </section>
+
+        <section class="getting-started">
+            <nav class="logo">
+                <a href="#">
+                    <img src="assets/images/logo.png" alt="logo" />
+                </a>
+            </nav>
+            <div class="content">
+                <h1>Getting Started</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.</p>
+                <div class="form">
+                    <div class="text-input user-name">
+                        <label>Your name</label>
+                        <p>John Doe</p>
+                    </div>
+                    <div class="text-input user-email">
+                        <label>Your email</label>
+                        <p>john.doe@mail.com</p>
+                    </div>
+                    <div class="text-input user-message">
+                        <label>Enter your message here...</label>
+                    </div>
+                    <div class="collab">
+                        <a href="#">Start Collaboration</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="get-resume">
+                <a href="#">Get my Resume<span><img src="./assets/images/ic_link_teal.png" /></span></a>
+            </div>
+            <ul class="social-icons">
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_stackoverflow.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_github.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_twitter.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_linkedin.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_medium.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_angellist.png" alt="image" />
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </div>
 
 </body>
