added contact section and footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </section>
         <div class="content-geo">
-            <img src="/assets/images/image_geometry_2.png" alt="" />
+            <img src="/assets/images/image_geometry_2.png" alt="image" />
         </div>
         <section class="projects">
             <h1> Projects </h1>
@@ -128,7 +128,9 @@
         <section class="about">
             <h1>About</h1>
             <p id="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ea eiusmod
             </p>
             <div class="download-cv">
                 <a href="#">Get my CV </a>
@@ -165,8 +167,73 @@
                     </ul>
                 </div>
             </div>
-                
+
         </section>
+        <section class="getting-started">
+            <nav class="logo">
+                <a href="#">
+                    <img src="assets/images/logo.png" alt="logo" />
+                </a>
+            </nav>
+            <div class="content">
+                <h1>Getting Started</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.</p>
+                <div class="form">
+                    <div class="text-input user-name">
+                        <label>Your name</label>
+                        <p>John Doe</p>
+                    </div>
+                    <div class="text-input user-email">
+                        <label>Your email</label>
+                        <p>john.doe@mail.com</p>
+                    </div>
+                    <div class="text-input user-message">
+                        <label>Enter your message here...</label>
+                    </div>
+                    <div class="collab">
+                        <a href="#">Start Collaboration</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="get-resume">
+                <a href="#">Get my Resume<span><img src="./assets/images/ic_link_teal.png" /></span></a>
+            </div>
+            <ul class="social-icons">
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_stackoverflow.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_github.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_twitter.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_linkedin.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_medium.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_angellist.png" alt="image" />
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </div>
 
 </body>
