refactored the css to include different types of Button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 If you like what you see and have a project you need coded, don’t hesitate and contact me.
             </p>
             <div class="collab">
-                <a href="#">Start Collaboration</a>
+                <button type="button" class="btn-primary-dark">Start Collaboration</button>
             </div>
         </section>
         <div class="content-geo">
@@ -169,75 +169,70 @@
             </div>
 
         </section>
-            <section class="getting-started">
-                <nav class="logo">
-                    <a href="#">
-                        <img src="assets/images/logo.png" alt="logo" />
-                    </a>
-                </nav>
-                <div class="content">
-                    <h1>Getting Started</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna.</p>
-                    <form action="https://formspree.io/f/123" method="post">
-                        <div class="text-input user-name">
-                            <label for="user-name">Your name</label>
-                            <input type="text" name="name" placeholder="John Doe" id="user-name" required
-                                maxlength="30" />
-                        </div>
-                        <div class="text-input user-email">
-                            <label for="user-email">Your email</label>
-                            <input type="email" name="email" placeholder="john.doe@mail.com" id="user-email" />
-                        </div>
-                        <div class="text-input user-message">
-                            <label>
-                            <textarea id="msg" name="user-message" placeholder="Enter your message here..." maxlength="500"></textarea>
+        <section class="getting-started">
+            <div class="content">
+                <h1>Getting Started</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                    et dolore magna.</p>
+                <form action="https://formspree.io/f/123" method="post">
+                    <div class="text-input user-name">
+                        <label for="user-name">Your name</label>
+                        <input type="text" name="name" placeholder="John Doe" id="user-name" required maxlength="30" />
+                    </div>
+                    <div class="text-input user-email">
+                        <label for="user-email">Your email</label>
+                        <input type="email" name="email" placeholder="john.doe@mail.com" id="user-email" />
+                    </div>
+                    <div class="text-input user-message">
+                        <label>
+                            <textarea id="msg" name="user-message" placeholder="Enter your message here..."
+                                maxlength="500"></textarea>
                         </label>
-                        </div>
-                        <div class="collab">
-                            <button>Start Collaboration</button>
-                        </div>
-                    </form>
-                </div>
-            </section>
-            <footer>
-                <div class="get-resume">
-                    <a href="#">Get my Resume<span><img src="./assets/images/ic_link_teal.png" alt="image"/></span></a>
-                </div>
-                <ul class="social-icons">
-                    <li>
-                        <a href="#">
-                            <img src="./assets/images/ic_stackoverflow.png" alt="image" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./assets/images/ic_github.png" alt="image" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./assets/images/ic_twitter.png" alt="image" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./assets/images/ic_linkedin.png" alt="image" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./assets/images/ic_medium.png" alt="image" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./assets/images/ic_angellist.png" alt="image" />
-                        </a>
-                    </li>
-                </ul>
-            </footer>
+                    </div>
+                    <div class="collab">
+                        <button type="button" class="btn-primary-dark">Start Collaboration</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <footer>
+            <div class="get-resume">
+                <a href="#">Get my Resume<span><img src="./assets/images/ic_link_teal.png" alt="image" /></span></a>
+            </div>
+            <ul class="social-icons">
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_stackoverflow.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_github.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_twitter.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_linkedin.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_medium.png" alt="image" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/ic_angellist.png" alt="image" />
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </div>
 
 </body>
