Implemented changes suggested by code reviewer Added the correct form link to recieve the form data Changed form button type from button to submit

--- a/index.html
+++ b/index.html
@@ -175,23 +175,23 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                     labore
                     et dolore magna.</p>
-                <form action="https://formspree.io/f/123" method="post">
+                <form action="https://formspree.io/f/xyyoovqy" method="post">
                     <div class="text-input user-name">
                         <label for="user-name">Your name</label>
                         <input type="text" name="name" placeholder="John Doe" id="user-name" required maxlength="30" />
                     </div>
                     <div class="text-input user-email">
                         <label for="user-email">Your email</label>
-                        <input type="email" name="email" placeholder="john.doe@mail.com" id="user-email" />
+                        <input type="email" name="email" placeholder="john.doe@mail.com" id="user-email" required />
                     </div>
                     <div class="text-input user-message">
                         <label>
                             <textarea id="msg" name="user-message" placeholder="Enter your message here..."
-                                maxlength="500"></textarea>
+                                maxlength="500" required></textarea>
                         </label>
                     </div>
                     <div class="collab">
-                        <button type="button" class="btn-primary-dark">Start Collaboration</button>
+                        <button type="submit" class="btn-primary-dark">Start Collaboration</button>
                     </div>
                 </form>
             </div>
