removed break tag from html codes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </h1>
             <p class="hero-summary">
                 Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my
-                works.<br>
+                works.
                 If you like what you see and have a project you need coded, don’t hesitate and contact me.
             </p>
             <div class="collab">
@@ -234,7 +234,5 @@
             </ul>
         </footer>
     </div>
-
 </body>
-
 </html>
