fixed webhint linter

--- a/index.html
+++ b/index.html
@@ -310,6 +310,6 @@
       </div>
     </div>
 
-   <script src="./index.js"></script>
+   <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
